--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>Prayog Enggineering Solutions</title>
     <meta name="title" content="Prayog Engineering Solutions">
-<meta name="description" content="We are Prayog Engineering Solutions based in Mumbai. We are a group of experienced experts united together to help grow, individuals, institutions, and small to medium setups in achieving their goals. We deal with various Consultancy Services, Design & Engineering Works, Heavy Fabrication Works, Solar Energy Projects, Environmental Projects, Computer-Aided Product Designs & analyses, Service & Maintenance, Supply of Skilled Manpower, etc.">
+<meta name="description" content="Expert engineering solutions in Mumbai - Prayog Engineering offers top-notch consultancy services, design & engineering works, heavy fabrication, solar energy projects, environmental solutions, computer-aided product designs & analyses, service & maintenance, and skilled manpower supply for individuals and businesses to achieve their goals.">
 <meta name="keywords" content="Prayog, Engineering, Solutions, Consultancy Services, Design & Engineering Works, Heavy Fabrication Works, Solar Energy Projects, Environmental Projects, Computer-Aided Product Designs & analyses, Service & Maintenance,">
 <meta name="robots" content="index, follow">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
